fixed snackbar z-index

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -71,4 +71,5 @@ html, body { height: 100%; }
   padding: 10px;
   text-align: center;
   border-radius: 15px;
+  z-index: 100000;
 }
